--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         .bot {
             font-size: 25px;
-            background-color: rgb(218, 218, 218);
+            background-color: transparent;
             margin-right: 20px;
             text-align: center;
             line-height: 50px;
@@ -77,12 +77,17 @@
 
         .bg_1 {
             width: 100%;
-            background-color: #E5E5E5;
+            background-image: url('./img/bg1.jpg');
+            background-repeat: no-repeat;
+            /* background-color: #E5E5E5; */
         }
 
         .bg_2 {
             width: 100%;
-            background-color: #A57C52;
+            background-image: url('./img/bg2.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            /* background-color: #A57C52; */
         }
 
         .container {
